--- a/arquivo_html.html
+++ b/arquivo_html.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 	<body>
-		<h1 textcolor=orange>O lula tá preso babaca</h1>
+		<h1 textcolor=orange>O Lula tá preso babaca</h1>
+		<h2>Vá pra casa do Romero Jucá</h2>
 	<body>
 <html>
